--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 body{
-background-image: url("logo2.jpg");
+background-color: #000000;
     background-repeat: no-repeat;
  background-position: center;
     background-size: cover;  
