--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ img {
     <div class="dropdown-content">
       <a href="ce.html">cultural Events</a>
       <a href="workshop.html">workshop</a>
-      <a href="Technical.html">Technical Event </a>
+      <a href="technical.html">Technical Event </a>
        
     </div>
   </li>
